# BrazzGUI

./: .clang-format  .gitignore  BasicEventHandler.h  BrazzGUIApp.cpp  BrazzGUIApp.h  Button.cpp  Button.h  CMakeLists.txt  Event.cpp  EventHandler.cpp  EventHandler.h  GUIHandle.h  GUIObject.cpp  GUIObject.h  README.md  TODO.md  TODO.txt  Win32GUIHandle.cpp  Window.cpp  Window.h  main.cpp  test.cpp
docs/: CMakeLists.txt
examples/: CMakeLists.txt  draw.cpp  layout.cpp  main.cpp  menu.cpp  panel.cpp  tabs.cpp
include/: BrazzApp.hpp  BrazzCore.hpp  Brush.hpp  Button.hpp  CheckBox.hpp  Checkbox.hpp  Color.hpp  ComboBox.hpp  Component.hpp  Control.hpp  ControlGroup.hpp  ControlHandle.hpp  ControlID.hpp  DrawPane.hpp  DrawableGUIEntity.hpp  Event.hpp  FileOpenDialog.hpp  FileSaveDialog.hpp  FileSelectDialog.hpp  Font.hpp  GUIEntity.hpp  Label.hpp  LayoutController.hpp  ListViewer.hpp  Menu.hpp  MenuItem.hpp  OKCancelDialog.hpp  OSInterface.hpp  Pane.hpp  Panel.hpp  ParentControl.hpp  RadioButton.hpp  RadioButtonGroup.hpp  RadioGroup.hpp  Slider.hpp  TabGroup.hpp  TextArea.hpp  TextBox.hpp  TextControl.hpp  Textbox.hpp  (+1 more)
include/Handlers/: MenuHandler.hpp
source/: BrazzCore.cpp  Brush.cpp  Button.cpp  CheckBox.cpp  ComboBox.cpp  Component.cpp  Control.cpp  ControlGroup.cpp  DrawableGUIEntity.cpp  GUIEntity.cpp  Label.cpp  ListViewer.cpp  Menu.cpp  MenuItem.cpp  OSInterface.cpp  Pane.cpp  RadioButton.cpp  RadioGroup.cpp  Slider.cpp  TextBox.cpp  Window.cpp
src/: BasicControl.h  BasicEventHandler.cpp  BrazzApp.cpp  Button.cpp  Button.test.cpp  CMakeLists.txt  Checkbox.cpp  Checkbox.test.cpp  ComboBox.cpp  ComboBox.test.cpp  Control.cpp  Control.test.hpp  ControlID.cpp  DrawPane.cpp  DrawPane.test.cpp  FileOpenDialog.cpp  FileSaveDialog.cpp  FileSelectDialog.cpp  Font.cpp  Label.cpp  Label.test.cpp  LayoutController.cpp  Menu.cpp  MenuItem.cpp  OKCancelDialog.cpp  Panel.cpp  ParentControl.cpp  RadioButton.cpp  RadioButton.test.cpp  RadioButtonGroup.cpp  RadioButtonGroup.test.cpp  TabGroup.cpp  TextArea.cpp  TextArea.test.cpp  TextControl.cpp  TextControl.test.hpp  Textbox.cpp  Textbox.test.cpp  Win32GUIHandle.h  Window.cpp  (+4 more)
src/ControlHandling/: CMakeLists.txt  ControlCreation.hpp  ControlHandling.hpp  ControlStyling.hpp
src/ControlHandling/Win32/: CMakeLists.txt  ControlCreation.cpp  ControlHandling.hpp  ControlStyling.cpp  FontHandler.cpp  FontHandler.hpp
src/DialogHandling/: DialogHandling.hpp
src/DialogHandling/Win32/: CMakeLists.txt  DialogHandling.cpp
src/EventHandling/: Event.hpp  EventMaker.hpp  EventSlotting.hpp
src/EventHandling/Win32/: CMakeLists.txt  EventMaker.cpp  EventSlotting.cpp
src/Handlers/Win32/: CMakeLists.txt  Win32MenuHandler.cpp  Win32MenuHandler.hpp
test/: CMakeLists.txt  test.cpp
tests/: BasicControl.test.cpp  Button.test.cpp  CMakeLists.txt  Checkbox.test.cpp  DrawPane.test.cpp  Label.test.cpp  TextArea.test.cpp  TextControl.test.hpp  Textbox.test.cpp  Window.test.cpp
